--- a/index.html
+++ b/index.html
@@ -5,14 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+		body {
+			background-color: #2D2D2D;
+            height: 95vh;
+		}
+
+        #container {
+            display: flex;
+            flex-direction: column;
+            border: 1px solid #000;
+            align-items: center;
+            justify-content: center;
+        }
+		
+		h1 {
+			color: #C26356;
+			font-size: 30px;
+			font-family: Menlo, Monaco, fixed-width;
+		}
+		
+		p {
+			color: white;
+			font-family: "Source Code Pro", Menlo, Monaco, fixed-width;
+		}
+	</style>
 </head>
 <body>
-    <h1>Welcome to the First Web application using Docker and Jenkins</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, praesentium numquam fugiat minima excepturi necessitatibus explicabo temporibus earum quia dolores in assumenda tempore delectus, unde, ullam cum non aspernatur et.</p>
-    <p>S3 bucket upload</p>
-    <p>ngrok tesing..1</p>
-    <p>documents test1 test2 test3 test4 test5 test6 test7 test8 test9</p>
-    <p>testing 9999999</p>
+    <div id="container">
+        <h1>Welcome to the First CI/CD Pipeline Integration using Docker and Jenkins</h1>
+        <p>
+            CI/CD pipelines are very popular for quick and faster way of development and testing.
+            In this example, I have connected local jenkins with github to initiate a CI/CD pipeline automatically.
+            I used all the local tools only, it will help you to do practice and gain confidence.
+        </p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
